k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dental-camp
  labels:
    name: dental-camp
    environment: production
