k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dental-camp-service
  namespace: dental-camp
  labels:
    app: dental-camp
spec:
  type: ClusterIP
  selector:
    app: dental-camp
    tier: frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
